A.F....... [ZBX-1357] updated Chinese (China), Czech, English (United States), Korean, Romanian, Ukrainian, Vietnamese translations; thanks to Zabbix translators (zalex_ua)
.......PS. [ZBXNEXT-3659] reduced cache locking time during configuration synchronization (wiper)

Bug fixes:
..F....... [ZBX-11277] fixed update in mass update form when inventory mode is not set explicitly (gcalenko)
..F....... [ZBX-10999] fixed user's access level to display popup content (miks)
..F....... [ZBX-9213] removed link from uneditable template and host names in all configuration sections (miks)
..F....... [ZBX-6533] improved LDAP authentication module status check for authentication form (gcalenko)
..F....... [ZBX-12019] fixed incorrectly displayed calendar date in maintenance edit form (miks)
..F....... [ZBX-11304] fixed trigger wizard expressions sorting as well as wizard crash due incorrect expression removal (miks)
A......... [ZBX-12023] fixed permission issue with event.get method (Sasha)
.......PS. [ZBX-12226] fixed configuration synchronization with Oracle databases (wiper)
.......PS. [ZBX-12046] fixed handling of database failure during ID selection (vso)
..F....... [ZBX-11683] fixed problem with lost IDs of unlinkable templates (miks)
.......PS. [ZBX-12142] fixed Oracle batch insert return value (wiper)
..F....... [ZBX-10546] fixed undefined index error in host import form while importing templates (gcalenko, Ivo)
..F....... [ZBX-11285] fixed cookie vulnerability for tabbed forms (gcalenko)
..F....... [ZBX-11486] fixed duplicated error messages in screens section (miks)
..F....... [ZBX-10807] fixed wrongly displayed field in item prototype form (miks)
..F....... [ZBX-11549] fixed 'numeric value' error in dashboard for php 7 (gcalenko, Sasha)
..F....... [ZBX-11559] fixed jquery binded function call on form submit (miks)
..F....... [ZBX-11405] fixed conditions to display treeview button in triggers section (miks)