@@ -6,6 +6,7 @@ A.F....... [ZBX-1357] updated Chinese (China), Czech, English (United States), K
 .......PS. [ZBXNEXT-3659] reduced cache locking time during configuration synchronization (wiper)
 
 Bug fixes:
+..F....... [ZBX-11812] fixed sorting of host interfaces (miks)
 ..F....... [ZBX-11277] fixed update in mass update form when inventory mode is not set explicitly (gcalenko)
 ..F....... [ZBX-10999] fixed user's access level to display popup content (miks)
 ..F....... [ZBX-9213] removed link from uneditable template and host names in all configuration sections (miks)
@@ -94,7 +95,7 @@ A.F....... [ZBX-11698] fixed resolving of user macros with context wich are defi
 ........S. [ZBX-11635] fixed possible deadlocks when removing obsolete VMWare services (Sergejs)
 ..F....... [ZBX-11661] prevented requesting all screens in slide show when slide show screens are deleted (Cemeris)
 ..F....... [ZBX-11527] fixed displaying maintenance icon for trigger element in maps (Cemeris)
-.......PS. [ZBX-11481] fixed resolving macros for ip and dns fields in interfaces that are linked to main interface with {HOST.IP} and {HOST.DNS} macros (Sergejs)
+.......PS. [ZBX-11481] fixed resolving macros for the IP and DNS fields in interfaces that are linked to the main interface with {HOST.IP} and {HOST.DNS} macros (Sergejs)
 A.F....... [ZBX-11482] improved performance for getting last value of web items by limiting query results for values in last 24h; thanks to D.Spindel Ljungmark for patch (Cemeris)
 .......PS. [ZBX-11630] added escaping '"', ''', '&', '<' and '>' characters in SOAP XML for VMware requests (Sergejs)
 .......PS. [ZBX-11525] ensured unique value timestamps (clock, ns) from active agents and senders (dimir)
@@ -1741,7 +1742,7 @@ Bug fixes:
 .......PS. [ZBX-11587] fixed handling database failure during transaction commit (viktors)
 .......PS. [ZBX-9889,ZBX-11674] fixed vmware.eventlog item values to have unique timestamps in history table (dimir)
 ........S. [ZBX-11635] fixed possible deadlocks when removing obsolete VMWare services (Sergejs)
-.......PS. [ZBX-11481] fixed resolving macros for ip and dns fields in interfaces that are linked to main interface with {HOST.IP} and {HOST.DNS} macros (Sergejs)
+.......PS. [ZBX-11481] fixed resolving macros for the IP and DNS fields in interfaces that are linked to the main interface with {HOST.IP} and {HOST.DNS} macros (Sergejs)
 ..F....... [ZBX-11527] fixed displaying maintenance icon for trigger element in maps (Cemeris)
 ..F....... [ZBX-11354] fixed applications being reset in templated items and item prototypes when modifying its parent (Ivo)
 ...G...... [ZBX-11494] fixed "system.stat" returning not supported after Zabbix agent restart on AIX (viktors)
